Fixed the spacing issue.

--- a/styles.css
+++ b/styles.css
@@ -123,7 +123,11 @@ header {
 
 .cardpage-body {
     width: 100%;
-    height: 100%;
+    height: auto;
+    background-image: url("./imgs/backgrounds/background1.jpeg");
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
 }
 
 .mtg-card-container {
@@ -133,10 +137,7 @@ header {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-image: url("./imgs/backgrounds/background1.jpeg");
-    background-size: cover;
-    background-position: center center;
-    background-repeat: no-repeat;
+
 }
 
 .mtg-card-header {
